# silis

./: .gdbinit  .gitignore  .lldbinit  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  STYLE.md  amalgamate.sh  default.nix  release.nix  shell.nix  silis.nix  sonar-project.properties  test.sh
.github/workflows/: build.yml
cmake/: DiscoverTests.cmake  testrunner.sh
gdb/: debug.py
modules/: macros.h
modules/alloc/: alloc.cpp  alloc.hpp
modules/kernel/: kernel.cpp  kernel.hpp
modules/kernel-linux/: kernel-linux.cpp
modules/main/src/: host.cpp  main.cpp
modules/net/: net.cpp  net.hpp
modules/scriptengine-jvm/: classfile-constants.inc  classfile.hpp  decode.hpp  descriptor.hpp  eval.cpp  instructions.hpp  instructions.inc  loadclass.cpp  loadcode.cpp  scriptengine.cpp  scriptengine.hpp
modules/scriptengine-jvm/scripts/: ExtractJRT.java
modules/scriptengine-jvm/tests/: Hello.java  Main.java  tests.cpp
modules/scriptengine-jvm/tests/_tests/: LoadClass.txt  load_class.txt
modules/test/: test.cpp  test.hpp
modules/test-net/: main.cpp
modules/tier0/: tests.cpp  tier0.cpp  tier0.hpp
modules/tier0/_tests/: Binding.txt  False.txt  Optional.txt  Pointer.txt  Result.txt  StrTok.txt  True.txt  Tuples.txt  TypeName.txt  Variant.txt
modules/tier1/: tests.cpp  tier1.cpp  tier1.hpp
modules/tier1/_tests/: Array.txt  DynArray.txt
modules/tier2/: tests.cpp  tier2.cpp  tier2.hpp
modules/tier2/_tests/: List.txt
scripts/: vis.py  vis_gdb.py  vis_lib.py  vis_lldb.py
src/: ctx.c  ctx.h  main.c  prelude.h  system.c  system.h  test.c
src/_prelude/: helpers.h  probe.h  stddef.h  stdint.h
src/compiler/: compilation-fwd.h  compilation.c  compilation.h  ctx.c  ctx.h  emit.c  emit.h  env.h  intrinsic.c  intrinsic.h  main.c  node-fwd.h  node.c  node.h  output.c  output.h  symbol.c  symbol.h  symbols.c  symbols.h  token-fwd.h  token.c  token.h  type.h  types.c  types.h  value.c  value.h
src/compiler/intrinsics/: _.c  _.h  actual.c  actual.h  cond.c  cond.h  define.c  define.h  do.c  do.h  emit.c  emit.h  expect.c  expect.h  extern.c  extern.h  func.c  func.h  if.c  if.h  include.c  include.h  minus.c  minus.h  plus.c  plus.h  set.c  set.h  untyped.c  untyped.h  while.c  while.h
src/compiler/intrinsics/debug/: puti.c  puti.h  puts.c  puts.h
src/compiler/intrinsics/types/: func.c  func.h
src/compiler/phases/: eval.c  flatten.c  flatten.h  parse.c  parse.h  parse.inc.h  print.c  print.h
src/compiler/phases/01-lex/: lex.c  lex.h
src/compiler/phases/01-parse/: parse.c  parse.h  parse.inc.h
src/compiler/phases/02-flatten/: flatten.c  flatten.h
src/compiler/phases/02-parse/: parse.c  parse.h
src/compiler/phases/03-eval/: eval.c  eval.h
src/compiler/phases/04-compile/: compile.c  compile.h
src/compiler/phases/04-emit/: emit.c  emit.h
src/compiler/phases/compile/: compile.c  compile.h
src/compiler/targets/: _.c  _.h  c.c  c.h  js.c  js.h
src/interpreter/: compilation.c  compilation.h  env.c  env.h  eval.c  eval.h  interpreter.c  interpreter.h  intrinsic.c  intrinsic.h  node.c  node.h  nodelist.c  nodelist.h  symbol.c  symbol.h  symbols.c  symbols.h  type.c  type.h  types.c  types.h  value.c  value.h
src/intrinsics/: _.h  cond.c  define.c  defun.c  do.c  extern.c  func.c  func.h  minus.c  plus.c  puti.c  puts.c
src/intrinsics/debug/: puti.c  puts.c
src/intrinsics/types/: func.c
src/lib/: allocator.c  allocator.h  array.h  buffer.c  buffer.h  env.c  env.h  fs.c  fs.h  macro.c  macro.h  misc.c  misc.h  number.c  number.h  result.c  result.h  slice.c  slice.h  stdio.c  stdio.h  string.c  string.h  trie.c  trie.h  vector.c  vector.h
src/lib/encoding/: ascii.c
src/lib/fs/: memoryfile.c  memoryfile.h  native.c
src/lib/string/: ascii.c  ascii.h
src/loader/: main.c
src/parser/: error.c  error.h  grammar.txt  lex.c  lex.h  lexer.c  lexer.h  node.c  node.h  parse.c  parse.h  parser.c  parser.h  token.c  token.h
src/phases/: eval.c  eval.h  flatten.c  parse.c  parse.h  parse.inc.h  print.c  print.h
src/phases/compile/: compile.c
src/stdlib/: Int.sil  _.sil
src/stdlib/io/: _.sil
tests/: 01-simple.sil  02-expect.sil  02-extern.sil  03-if.sil  04-while.sil  hello.sil
tools/: test-macros.sh
